--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8091
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3308/api_etudiant?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3308/api_etudiant?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 #?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
