--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "0.0.0.0:8091:8091"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3308/api_etudiant
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3308/api_etudiant?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
       - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
