--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,32 @@
 version: '3.3'
 services:
-  db:
+   
+  # Spring Boot Application
+  spring-boot-app:
+    image: backend
+    ports:
+      - "0.0.0.0:8091:8091"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3308/db_etudiant
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    depends_on:
+      - mysql
+
+  # MySQL Database
+  mysql:
     image: mysql:5.7
     restart: always
     environment:
       MYSQL_DATABASE: 'db_etudiant'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'root'
-      # Password for root access
+      MYSQL_ROOT_USERNAME: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      # <Port exposed> : <MySQL Port running inside container>
-      - 3308:3306
-    expose:
-      # Opens port 3306 on the container
-      - '3308'
-      # Where our data will be persisted
+      - '0.0.0.0:3308:3306'
     volumes:
-      - my-db:/var/lib/mysql
-  webApp:
-    image: web_store
-    restart: always
-    ports:
-      - 8091:8080
-    build: .
-# Names our volume
+      - db_etudiant:/var/lib/mysql
+  # liste des volumes
 volumes:
-  my-db:
+  db_etudiant:
