--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
    
   # Spring Boot Application
   spring-boot-app:
-    image: backend
+    image: web-backend
     ports:
       - "0.0.0.0:8091:8091"
     environment:
