--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
-version: '3.3'
+version: '3'
 services: 
   # Spring Boot Application
   spring-boot-app:
     image: web-backend
     ports:
-      - "0.0.0.0:8091:8091"
+      - 0.0.0.0:8091:8091
+    restart: on-failure
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3308/db_etudiant
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql/db_etudiant
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=root
       - SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
@@ -23,7 +24,7 @@ services:
       MYSQL_ROOT_USERNAME: 'root'
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      - '0.0.0.0:3308:3306'
+      - 0.0.0.0:3308:3306
     volumes:
       - db_etudiant:/var/lib/mysql
   # liste des volumes
